# axiam-c-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  axiam_8h.html  axiam_8h__incl.map  axiam_8h__incl.md5  axiam_8h_source.html  classes.html  client_8h.html  client_8h__dep__incl.map  client_8h__dep__incl.md5  client_8h__incl.map  client_8h__incl.md5  client_8h_source.html  conanfile.py  config_8h.html  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h__incl.map  config_8h__incl.md5  config_8h_source.html  dir_94436b1b4b45cc335253143ec7e1b319.html  dir_94436b1b4b45cc335253143ec7e1b319_dep.map  dir_94436b1b4b45cc335253143ec7e1b319_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  error_8h.html  error_8h__dep__incl.map  error_8h__dep__incl.md5  error_8h__incl.map  error_8h__incl.md5  error_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  (+44 more)
.github/workflows/: coverage.yml  docs.yml  sdk-ci-c.yml
cmake/: axiam-c-sdkConfig.cmake.in
examples/: CMakeLists.txt  README.md  login_mfa.c  rest_authz.c
include/axiam/: axiam.h  client.h  config.h  error.h  guard.h  jwks.h  sensitive.h  transport.h
ports/axiam-c-sdk/: portfile.cmake  vcpkg.json
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_3.js  files_6.js  functions_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  (+1 more)
src/: client.c  config.c  error.c  guard.c  internal.h  json_build.c  jwks.c  sensitive.c  transport_curl.c  util.c  version.c
tests/: CMakeLists.txt  gen_pki.sh  jwt_fixture.c  jwt_fixture.h  test_authz.c  test_client_auth.c  test_client_branches.c  test_client_failing_transport.c  test_client_null_args.c  test_config.c  test_error.c  test_guard.c  test_guard_branches.c  test_integration_curl.c  test_json_build.c  test_jwks.c  test_jwks_branches.c  test_mtls.c  test_refresh_org.c  test_sensitive.c  test_singleflight.c  test_tls_server.c  test_transport_curl_extra.c  test_util.h  test_util_branches.c
